--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/richardfarr/Library/r-miniconda/envs/r-reticulate/bin/python"
+    "python.pythonPath": "/usr/local/bin/python3"
 }
