--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/richardfarr/Library/r-miniconda/envs/r-reticulate/bin/python"
+    "python.pythonPath": "C:\\Users\\dondc\\AppData\\Local\\Programs\\Python\\Python39\\python.exe"
 }
