--- a/code/merritt/jan-21-blog/.vscode/settings.json
+++ b/code/merritt/jan-21-blog/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/merritt/.local/share/virtualenvs/jan-21-blog-Dq7I2xWz/bin/python"
+    "python.pythonPath": "/usr/local/bin/python3"
 }
