--- a/code/charlie/.vscode/settings.json
+++ b/code/charlie/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/usr/local/bin/python3"
+    "python.pythonPath": "/Users/charlie/.local/share/virtualenvs/drf-example-master-n_-DecSn/bin/python"
 }
