--- a/code/mike/django/drf-example/Pipfile
+++ b/code/mike/django/drf-example/Pipfile
@@ -5,7 +5,8 @@ name = "pypi"
 
 [packages]
 django = "*"
-djangorestframework = "==3.12"
+djangorestframework = "*"
+pylint = "*"
 
 [dev-packages]
 
