--- a/code/merritt/jan-21-drf-example/.vscode/settings.json
+++ b/code/merritt/jan-21-drf-example/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/merritt/.local/share/virtualenvs/jan-21-drf-example-Qvdtf8rw/bin/python"
+    "python.pythonPath": "/Users/chimaybidet/.local/share/virtualenvs/drf-example-master-mhkSnvPy/bin/python"
 }
