--- a/code/charlie/.vscode/settings.json
+++ b/code/charlie/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/charlie/.local/share/virtualenvs/drf-example-master-n_-DecSn/bin/python"
+    "python.pythonPath": "../../System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7"
 }
